--- a/2024/2024-07-14.md
+++ b/2024/2024-07-14.md
@@ -15,7 +15,11 @@ The main things I look for instead are feeds organized in [reverse chronological
 - **News organizations’ bespoke sites and apps.** Again, a somewhat old-school option here. But the plus side is that these things usually don’t have much algorithmic curation, except perhaps  for the occasional “most read stories” list or something that’s similarly pretty simple. Where the news orgs have generally been more experimental is in story presentation, design, and multimedia experience. But even with those features, you’re still getting the creative vision of human reporters and editors, not robots trying to target you with ads.
 - **The Brave web browser.** I will give this one an honorable mention on the list because I find its [default privacy safeguards](https://brave.com/) protect me well against algorithmically targeted advertising in particular. That’s not exactly pertinent to the matter of prioritizing feeds of news headlines. But it is broadly related to the theme of breaking from the major platforms’ surveillance-driven business models.
 
-So what do I cut out of my daily setup in order to make room for the above? Well, as you can probably guess, I’m generally spending less time on social media these days, and I specifically try not to use it as a news source. When I’m on social, I’m much more apt to post personal updates or maybe reply to a person I know offline who’s posted something that caught my eye. But social simply isn’t a primary news source for me anymore, because it’s clearly a pretty crappy at that particular job, precisely because it leans too heavily on algos.
+So what do I cut out of my daily setup in order to make room for the above? Well, as you can probably guess, I’m generally spending less time on social media these days, and I specifically try not to use it as a news source. When I’m on social, I’m much more apt to post personal updates or maybe reply to a person I know offline who’s posted something that caught my eye.
+
+But social simply isn’t a primary news source for me anymore, because it’s clearly pretty crappy at that particular job. This is true precisely *because* social platforms usually lean too heavily on algos that tend to make us [angrier and more extreme](https://www.psychologytoday.com/us/blog/friction/201807/why-social-media-makes-us-angrier-and-more-extreme), but not necessarily better informed.
+
+It's more profitable for them that way.
 
 That said, I will admit my alternative solution is also imperfect in some ways. True math geeks might argue, for example, that reverse chronology is itself a sort of algorithm, albeit a much simpler one than the social platforms’ inscrutable black boxes for prioritizing our feeds.
 
