Fixing photo link

--- a/2024/2024-07-14.md
+++ b/2024/2024-07-14.md
@@ -1,7 +1,7 @@
 # Cut the algos from your news diet.
 ## It’s one of the best things we could all do to have better small-d democratic discourse. Here’s how I do it.
 
-![Journalists taking notes](https://images.unsplash.com/photo-1503428593586-e225b39bddfe)
+![Journalists taking notes](https://mcusercontent.com/cb5b2262972b0cb6543967aa9/images/c705b8d0-ebc9-c42f-3372-c83b19f1e90f.jpg)
 *Photo by the Climate Reality Project via Unsplash*
 
 _By_ [_Peter A. McKay_](https://pmckay.com)
