--- a/2024/2024-07-21.md
+++ b/2024/2024-07-21.md
@@ -10,55 +10,34 @@ _By_ [_Peter A. McKay_](https://pmckay.com)
 
 ### Week in Review: July 14-20, 2024
 
-- tk
-https://decrypt.co/239633/generative-ai-writing-creative-diverse-study
+<!-- Riff 2-3 sentences on on market action, then transition to politics stuff. Crypto prices jumped. Mt. Gox redemptions winding down, etc. Some links: https://www.coindesk.com/tech/2024/07/18/mt-gox-creditors-reportedly-hit-by-failed-login-attempts-amid-repayments/ | https://www.coindesk.com/news-analysis/2024/07/18/germany-dumping-28b-bitcoin-is-market-intervention-despite-murky-legal-justifications/Links  -->
 
-https://thenewstack.io/python-developers-hold-the-key-to-blockchain-adoption/
+- Ethereum co-founder, Vitalik Buterin, warns against voting for politicians solely based on their pro-crypto stance. He mentions that even authoritarian governments, like Russia, have shown interest in crypto. This comes after venture capitalists Marc Andreessen and Ben Horowitz expressed support for Donald Trump's campaign. Fairshake, a super PAC, has received significant contributions from top crypto companies. Buterin did not name specific politicians but cautions against creating an incentive for politicians to support crypto just for voter approval. Trump has been increasingly bullish on crypto, accepting digital currency donations and promising to defend self-custody rights. The Biden administration has been seen as hard on crypto, but some Biden allies are concerned about the perception that Biden is anti-crypto and Trump is pro-crypto. Trump is set to headline the Bitcoin 2024 conference. https://cnbc.com/2024/07/17/ethereum-co-founder-warns-against-voting-only-on-pro-crypto.html
 
-### Odds & Ends
+- https://decrypt.co/240326/mark-cuban-says-bitcoin-is-driving-silicon-valleys-love-for-trump
 
-- tk
+- Big push by Musk: Link tk
+
+- Time magazine story on crypto going pro-Trump...
+
+- https://www.coindesk.com/business/2024/07/17/its-a-bitcoin-play-mark-cuban-says-silicon-valleys-embrace-of-trump-revolves-around-crypto/
 
 
-### Week in Review: July 7-13, 2024
+- https://slate.com/technology/2024/07/jd-vance-donald-trump-elon-musk-silicon-valley-tech-billionaires-vice-president.html
 
-- Major AT&T hack. https://www.wsj.com/business/telecom/at-t-says-hacker-stole-data-on-nearly-all-its-wireless-customers-32d6969d?st=nahqd4oyzoay4x2&reflink=desktopwebshare_permalink | https://www.washingtonpost.com/business/2024/07/12/att-wireless-hacker-data-breach/
+- https://www.coindesk.com/policy/2024/07/16/trump-campaign-q2-crypto-donations-amounted-to-3m-of-331m-raised-wsj/
 
-- Solana and ether ETF updates. <!-- Links tk -->
+- https://decrypt.co/239952/trump-super-pac-gets-millions-from-crypto-backers
 
-- Worldcoin adoption stands around 6 million users, well short of founder Sam Altman's target of one billion. https://www.fastcompany.com/91154657/sam-altman-worldcoin-crypto-biometric-startup-falls-well-short-1-billion-sign-up-goal
+- Trump speaking at BTC conf in Nashville.
 
-- BlackRock/Buidl's tokenized money market fund has reached over $500 million in AUM. <!-- Link tk-->
-
-- AAPL, MSFT decline openai board seats
-
-- Apple's VisionPro sales aren't doing much. https://gizmodo.com/apple-vision-pro-u-s-sales-2000469302
-
-- MicroStrategy stock split: https://decrypt.co/239420/microstrategy-stock-split-13-billion-bitcoin
-
-- MSFT gives up board seat at OpenAI. <!-- Link tk -->
-
-- **Big Tech's environmental claims are under fire.** Amazon: https://www.fastcompany.com/91153918/amazon-says-it-now-runs-on-100-clean-power-employees-say-its-more-like-22 | Microsoft: TKTKTK purchasing credits from Occidental, etc... | Other: TKTKTK <!-- Recent links tk -->
-
-- https://decrypt.co/239003/aussies-still-prefer-bitcoin-but-not-by-much-kraken
-
-- https://www.washingtonpost.com/technology/2024/07/09/ftc-bans-kids-ngl-messaging-app/
-
-- https://blog.cloudflare.com/declaring-your-aindependence-block-ai-bots-scrapers-and-crawlers-with-a-single-click
-
-- Bianco on rates: https://x.com/biancoresearch/status/1811150143749771654
+- Decrypt headline on Menendez: https://decrypt.co/240087/bitcoin-critic-senator-menendez-convicted-of-taking-bribes-in-gold
 
 ### Odds & Ends
 
-- https://slate.com/life/2024/07/flying-is-better-with-an-open-window-shade.html
+- **The romcom When Harry Met Sally just celebrated its 35th anniversary.** Salon's critic Melanie McFarland [reflects](https://www.salon.com/2024/07/14/when-harry-met-sally-relationships-intimacy/) on questions the classic film poses for modern viewers in an era when dating apps and other technology have transformed people's offline relationships radically.
 
-- https://www.salon.com/2024/07/07/defying-inflation-how-arizona-iced-tea-mostly-maintains-its-99-cent-price-tag/
-
-- **"I don't think that's how brains work."** https://slate.com/life/2024/06/how-to-live-with-labelers-and-not-lose-your-mind.html
-
-- Afghani breakdancer in the Olympics. <!-- Pickup from WaPo -->
-
-https://www.nytimes.com/2024/07/13/your-money/jonathan-clements-cancer.html
+- **Breakdancing will make its debut as an Olympic sport** when the Paris games open July 26. One competitor to watch: Afghanistan's Manizha Talash, whose family fled to Pakistan and then Spain because the repressive Taliban government, which forbids all dancing, was searching for her breaking crew. In Paris, she will compete for the multinational Refugee Olympic Team, composed of displaced athletes. ([Washington Post](https://www.washingtonpost.com/sports/olympics/2024/07/03/manizha-talash-afghanistan-breakdancer-paris-olympics/))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
