fleshing out drafts

--- a/2024/2024-07-21.md
+++ b/2024/2024-07-21.md
@@ -1,31 +1,54 @@
-# tktktk
-## tktktk
+# Crypto's leaders are going all-in for the GOP
+## Major Silicon Valley players like Musk and a16z are getting louder -- and more generous with donations -- to return Trump to the White House.
 
-![Friendly sign reading: "Come in. We're open."](https://images.unsplash.com/photo-1473187983305-f615310e7daa)
-*Photo by Álvaro Serrano via Unsplash*
+![Venture capitalist Ben Horowitz speaking at TechCrunch's Disrupt conference in 2018](https://upload.wikimedia.org/wikipedia/commons/9/92/TechCrunch_Disrupt_San_Francisco_2018_-_day_2_%2842713740520%29.jpg)
+*Venture capitalist Ben Horowitz is one of the high-profile Silicon Valley donors backing Donald Trump in November's presidential election. File photo courtesy of TechCrunch via Wikimedia Commons*
 
 _By_ [_Peter A. McKay_](https://pmckay.com)
 
-<!-- Lede item. Should run ~450 words. CTA for substack subscriptions, donations. Finish migrations and setup first! -->
+**The U.S. crypto community's political awakening** has been a curious thing to observe over the last year or so. My assessment [back in February](https://mailchi.mp/d0b01c57402c/web3-weekly-20342776):
+
+<blockquote><em><p>The crypto industry is collectively <a href="https://www.coinbase.com/blog/just-the-facts-a-regulation-by-enforcement-only-approach-is-hurting-american">pretty angry</a> right now at Washington's recent regulatory <a href="https://www.cnn.com/2023/11/22/business/takeaways-binance-crypto-crackdown/index.html">crackdown</a> based mostly on decades-old laws written for the stock market. Meanwhile, Congress has been too paralyzed to write updated laws that many insiders would actually welcome for the sake of <a href="https://www.coindesk.com/consensus-magazine/2023/10/09/crypto-risks-another-sam-bankman-fried-if-us-doesnt-provide-clear-regulation/">clarity</a>. And these folks' pocketbooks are flush right now thanks to a roaring rally in token prices to start 2024.</p>
+
+<p>That could be just the formula for a new use case for digital money to emerge this year -- political payback.</p></em></blockquote>
+
+Several high-profile announcements last week loudly confirmed exactly that scenario underway. In particular, many tech CEOs are now donating millions to Donald Trump, who has explicitly [positioned himself](https://www.independent.co.uk/tech/trump-bitcoin-crypto-president-jd-vance-b2582235.html) as a pro-crypto candidate this time.
+
+(It also helps that the token rally continued [at a torrid pace](https://www.msn.com/en-us/money/news/bitcoin-posts-15-weekly-gain-amid-broader-crypto-rally-cnbc-crypto-world/vi-BB1qimKu) last week. So, yes, a lot of would-be political donors in crypto are still flush.)
+
+Notably, both current presidential candidates have flip-flopped on crypto to varying degrees. Trump was [openly critical](https://finance.yahoo.com/news/trump-i-am-not-a-fan-of-bitcoin-and-other-cryptocurrencies-105950093.html) of digital currencies when he previously held America's highest office from 2017 to 2021. And Biden's campaign has [tried to repair](https://www.theblock.co/post/297504/biden-campaign-shifts-crypto-stance-engages-crypto-industry-presidential-elections-2024) its damaged relationship with the crypto industry this summer, so far to little avail.
 
 ### Week in Review: July 14-20, 2024
 
-<!-- Riff 2-3 sentences on on market action, then transition to politics stuff. Crypto prices jumped. Mt. Gox redemptions winding down, etc. Some links: https://www.coindesk.com/tech/2024/07/18/mt-gox-creditors-reportedly-hit-by-failed-login-attempts-amid-repayments/ | https://www.coindesk.com/news-analysis/2024/07/18/germany-dumping-28b-bitcoin-is-market-intervention-despite-murky-legal-justifications/Links  -->
+**Like many Americans, I have strong feelings** of my own about all of the above, to be honest. But I'll save those to share another day perhaps.
 
-- Ethereum co-founder, Vitalik Buterin, warns against voting for politicians solely based on their pro-crypto stance. He mentions that even authoritarian governments, like Russia, have shown interest in crypto. This comes after venture capitalists Marc Andreessen and Ben Horowitz expressed support for Donald Trump's campaign. Fairshake, a super PAC, has received significant contributions from top crypto companies. Buterin did not name specific politicians but cautions against creating an incentive for politicians to support crypto just for voter approval. Trump has been increasingly bullish on crypto, accepting digital currency donations and promising to defend self-custody rights. The Biden administration has been seen as hard on crypto, but some Biden allies are concerned about the perception that Biden is anti-crypto and Trump is pro-crypto. Trump is set to headline the Bitcoin 2024 conference. https://cnbc.com/2024/07/17/ethereum-co-founder-warns-against-voting-only-on-pro-crypto.html
+For now, let it suffice there is just a lot of news to cover. So let's get to those facts first:
+
+- **In a lenghty new podcast episode,** the founders of venture giant Andreessen Horowitz detailed why [they're supporting Trump](https://youtu.be/n_sNclEgQZQ?si=WSCczluJ6u8pzi9i) in '24 and how that fits into their startup-focused ["Little Tech" agenda](https://a16z.com/the-little-tech-agenda/). Early in the podcast, firm co-founder Ben Horowitz acknowledges that his choice of candidates might upset many of his friends and even his mother.
+
+- **Elon Musk pledged around $45 million a month to America PAC,** a new super political-action committee backing the Trump campaign. Other donors include Palantir Technologies co-founder Joe Lonsdale, early bitcoin investors Tyler and Cameron Winklevoss, former U.S. Ambassador to Canada Kelly Craft, and her husband, Joe Craft, who is chief executive of coal producer Alliance Resource Partners. ([Wall Street Journal](https://www.msn.com/en-us/money/companies/elon-musk-has-said-he-is-committing-around-45-million-a-month-to-a-new-pro-trump-super-pac/ar-BB1q2ERV))
+
+- Trump attending BTC Conference. Big fundraiser embedded: https://decrypt.co/240607/trump-bitcoin-conference-roundtable-seats-are-going-for-844600 | https://decrypt.co/240607/trump-bitcoin-conference-roundtable-seats-are-going-for-844600 | https://www.coindesk.com/opinion/2024/07/15/trumps-speech-at-bitcoin-conference-will-mark-a-pivotal-moment-for-crypto/
+
+- **The curious case of J.D. Vance:** Forbes notes that Trump's vice presidential running mate has [a six-figure personal stash](https://www.forbes.com/sites/leokamin/2024/07/20/two-crypto-billionaires-are-among-jd-vances-biggest-donors/) of bitcoin, according to financial disclosure statements. On a more worrisome note for some in Silicon Valley, however: Vance, a former VC employee himself, [favors breaking up Google](https://www.theverge.com/24199314/jd-vance-donald-trump-vp-antitrust-big-tech-ftc-lina-khan-elizabeth-warren-google) and has [praised Lina Khan](https://thehill.com/policy/technology/4491363-vance-biden-ftc-chief-is-doing-a-pretty-good-job/), a Biden-appointed regulator who has aggressively pursued antitrust cases.
+
+- **Coinbase CEO Brian Armstrong,** a vocal critic of the Securities and Exchange Commission's enforcement campaign against crypto, met with House Democrats on Wednesday to discuss regulatory issues, according to [CoinDesk](https://www.coindesk.com/policy/2023/07/18/coinbase-ceo-brian-armstrong-to-meet-house-democrats-about-crypto-legislation-bloomberg/). Reuters [reported](https://www.reuters.com/technology/us-crypto-advocacy-group-tops-1-million-members-after-biden-veto-2024-06-06/) in June that Armstrong doesn't plan to ensorse a presidential candidate, preferring to push for bipartisan crypto legislation instead. But he is donating lavishly to pro-crypto PACs like Fairshake and Stand with Crypto.  
+
+- Fairshake is 33-2.
+
+- **Ethereum co-founder Vitalik Buterin** took to his personal blog to [warn against](https://vitalik.eth.limo/general/2024/07/17/procrypto.html) the increasing politicization of crypto and the temptation for people in the industry to become single-issue voters based strictly on candidates' policies around regulating token markets.
+
+- NYT notes that most rank-and-file employees still democratic. <!-- Use DealBook link  -->
+
+- Reid Hoffman is SV's most outspoken liberal. | Cuban: https://www.coindesk.com/business/2024/07/17/its-a-bitcoin-play-mark-cuban-says-silicon-valleys-embrace-of-trump-revolves-around-crypto/
+
+- FTC crackdown. Antitrust enforcement against big tech. Vance is a fan. https://slate.com/technology/2024/07/jd-vance-donald-trump-elon-musk-silicon-valley-tech-billionaires-vice-president.html
 
 - https://decrypt.co/240326/mark-cuban-says-bitcoin-is-driving-silicon-valleys-love-for-trump
-
-- Big push by Musk: Link tk
 
 - https://decrypt.co/240580/donald-trump-bitcoin-evolution-timeline-president
 
 - Time magazine story on crypto going pro-Trump...
-
-- https://www.coindesk.com/business/2024/07/17/its-a-bitcoin-play-mark-cuban-says-silicon-valleys-embrace-of-trump-revolves-around-crypto/
-
-
-- https://slate.com/technology/2024/07/jd-vance-donald-trump-elon-musk-silicon-valley-tech-billionaires-vice-president.html
 
 - https://www.coindesk.com/policy/2024/07/16/trump-campaign-q2-crypto-donations-amounted-to-3m-of-331m-raised-wsj/
 
