--- a/2024/2024-07-28.md
+++ b/2024/2024-07-28.md
@@ -6,6 +6,9 @@
 
 _By_ [_Peter A. McKay_](https://pmckay.com)
 
+<!-- Lede item. Should run ~450 words. CTA for substack subscriptions, donations. Finish migrations and setup first! -->
+
+
 <!--
 
 Lede item. Should run ~450 words. Some possibilities...
