--- a/2024/2024-07-21.md
+++ b/2024/2024-07-21.md
@@ -16,7 +16,15 @@ Several high-profile announcements last week loudly confirmed exactly that scena
 
 (It also helps that the token rally continued [at a torrid pace](https://www.msn.com/en-us/money/news/bitcoin-posts-15-weekly-gain-amid-broader-crypto-rally-cnbc-crypto-world/vi-BB1qimKu) last week. So, yes, a lot of would-be political donors in crypto are still flush.)
 
-Notably, both current presidential candidates have flip-flopped on crypto to varying degrees. Trump was [openly critical](https://finance.yahoo.com/news/trump-i-am-not-a-fan-of-bitcoin-and-other-cryptocurrencies-105950093.html) of digital currencies when he previously held America's highest office from 2017 to 2021. And Biden's campaign has [tried to repair](https://www.theblock.co/post/297504/biden-campaign-shifts-crypto-stance-engages-crypto-industry-presidential-elections-2024) its damaged relationship with the crypto industry this summer, so far to little avail.
+Notably, there has been a lot of flip-flopping at the presidential level regarding crypto recently.
+
+Before announcing his intentions to become the first "crypto president," Trump was [openly critical](https://finance.yahoo.com/news/trump-i-am-not-a-fan-of-bitcoin-and-other-cryptocurrencies-105950093.html) of digital currencies when he previously held America's highest office from 2017 to 2021.
+
+The Biden campaign [tried to repair](https://www.theblock.co/post/297504/biden-campaign-shifts-crypto-stance-engages-crypto-industry-presidential-elections-2024) its damaged relationship with the crypto industry earlier this summer, to little avail. But that became moot in more ways than one when Biden made the blockbuster announcement Sunday afternoon that he's [dropping out of the race](https://apnews.com/article/biden-drops-out-2024-election-ddffde72838370032bdcff946cfc2ce6) due to concerns about his age and health.
+
+Still, the anti-crypto label may stick to the Democratic Pary as a whole for some time longer, given the presence in its ranks of vocal congressional opponents to the industry like Sen. Elizabeth Warren. The party's new nominee for president, whoever emerges, will also have to carve out their own position on crypto, whether its similar to the Biden administration's or (perhaps more likely) a more lenient stance.  
+
+[Decrypt notes](https://decrypt.co/240692/kamala-crypto-biden-replacements-crypto) that one early frontrunner for the nomination, Vice President Kamala Harris, has never publicly commented on crypto issues. However, her earlier rise in local politics in California was generally considered a favorable development for that state's giant tech industry.
 
 ### Week in Review: July 14-20, 2024
 
@@ -28,35 +36,19 @@ For now, let it suffice there is just a lot of news to cover. So let's get to th
 
 - **Elon Musk pledged around $45 million a month to America PAC,** a new super political-action committee backing the Trump campaign. Other donors include Palantir Technologies co-founder Joe Lonsdale, early bitcoin investors Tyler and Cameron Winklevoss, former U.S. Ambassador to Canada Kelly Craft, and her husband, Joe Craft, who is chief executive of coal producer Alliance Resource Partners. ([Wall Street Journal](https://www.msn.com/en-us/money/companies/elon-musk-has-said-he-is-committing-around-45-million-a-month-to-a-new-pro-trump-super-pac/ar-BB1q2ERV))
 
-- Trump attending BTC Conference. Big fundraiser embedded: https://decrypt.co/240607/trump-bitcoin-conference-roundtable-seats-are-going-for-844600 | https://decrypt.co/240607/trump-bitcoin-conference-roundtable-seats-are-going-for-844600 | https://www.coindesk.com/opinion/2024/07/15/trumps-speech-at-bitcoin-conference-will-mark-a-pivotal-moment-for-crypto/
+- **Trump is set to speak Saturday** in Nashville at the [Bitcoin 2024](https://b.tc/conference/2024) conference, a major industry gathering. He will also host a private fundraiser where a single seat will [cost $844,000](https://decrypt.co/240607/trump-bitcoin-conference-roundtable-seats-are-going-for-844600).
 
 - **The curious case of J.D. Vance:** Forbes notes that Trump's vice presidential running mate has [a six-figure personal stash](https://www.forbes.com/sites/leokamin/2024/07/20/two-crypto-billionaires-are-among-jd-vances-biggest-donors/) of bitcoin, according to financial disclosure statements. On a more worrisome note for some in Silicon Valley, however: Vance, a former VC employee himself, [favors breaking up Google](https://www.theverge.com/24199314/jd-vance-donald-trump-vp-antitrust-big-tech-ftc-lina-khan-elizabeth-warren-google) and has [praised Lina Khan](https://thehill.com/policy/technology/4491363-vance-biden-ftc-chief-is-doing-a-pretty-good-job/), a Biden-appointed regulator who has aggressively pursued antitrust cases.
 
-- **Coinbase CEO Brian Armstrong,** a vocal critic of the Securities and Exchange Commission's enforcement campaign against crypto, met with House Democrats on Wednesday to discuss regulatory issues, according to [CoinDesk](https://www.coindesk.com/policy/2023/07/18/coinbase-ceo-brian-armstrong-to-meet-house-democrats-about-crypto-legislation-bloomberg/). Reuters [reported](https://www.reuters.com/technology/us-crypto-advocacy-group-tops-1-million-members-after-biden-veto-2024-06-06/) in June that Armstrong doesn't plan to ensorse a presidential candidate, preferring to push for bipartisan crypto legislation instead. But he is donating lavishly to pro-crypto PACs like Fairshake and Stand with Crypto.  
+- **Coinbase CEO Brian Armstrong,** a vocal critic of the Securities and Exchange Commission's enforcement campaign against crypto, met with House Democrats on Wednesday to discuss regulatory issues, according to [CoinDesk](https://www.coindesk.com/policy/2023/07/18/coinbase-ceo-brian-armstrong-to-meet-house-democrats-about-crypto-legislation-bloomberg/). Reuters [reported](https://www.reuters.com/technology/us-crypto-advocacy-group-tops-1-million-members-after-biden-veto-2024-06-06/) in June that Armstrong doesn't plan to ensorse a presidential candidate, preferring to push for bipartisan crypto legislation instead. But he is donating lavishly to pro-crypto PACs like Fairshake and Stand with Crypto.
 
-- Fairshake is 33-2.
+- **As of late June,** Fairshake had already contributed over $100 million to candidates in 35 House and Senate candidates. Its preferred candidates won 33 of those races. ([CNBC](https://www.cnbc.com/2024/06/26/crypto-pac-house-senate-elections.html))
 
 - **Ethereum co-founder Vitalik Buterin** took to his personal blog to [warn against](https://vitalik.eth.limo/general/2024/07/17/procrypto.html) the increasing politicization of crypto and the temptation for people in the industry to become single-issue voters based strictly on candidates' policies around regulating token markets.
 
-- NYT notes that most rank-and-file employees still democratic. <!-- Use DealBook link  -->
+- **Despite the Republican support among some high-profile CEOs,** the rank and file of Silicon Valley still leans heavily toward Democrats. A recent poll by the tech-industry news site The Information found, taken before Biden dropped out, found that respondents favored him over Trump by a margin of [59% to 27%](https://www.theinformation.com/articles/biden-favored-by-the-information-readers-despite-investor-support-for-trump).
 
-- Reid Hoffman is SV's most outspoken liberal. | Cuban: https://www.coindesk.com/business/2024/07/17/its-a-bitcoin-play-mark-cuban-says-silicon-valleys-embrace-of-trump-revolves-around-crypto/
-
-- FTC crackdown. Antitrust enforcement against big tech. Vance is a fan. https://slate.com/technology/2024/07/jd-vance-donald-trump-elon-musk-silicon-valley-tech-billionaires-vice-president.html
-
-- https://decrypt.co/240326/mark-cuban-says-bitcoin-is-driving-silicon-valleys-love-for-trump
-
-- https://decrypt.co/240580/donald-trump-bitcoin-evolution-timeline-president
-
-- Time magazine story on crypto going pro-Trump...
-
-- https://www.coindesk.com/policy/2024/07/16/trump-campaign-q2-crypto-donations-amounted-to-3m-of-331m-raised-wsj/
-
-- https://decrypt.co/239952/trump-super-pac-gets-millions-from-crypto-backers
-
-- Trump speaking at BTC conf in Nashville.
-
-- Decrypt headline on Menendez: https://decrypt.co/240087/bitcoin-critic-senator-menendez-convicted-of-taking-bribes-in-gold
+- **Decrypt found time to have a bit of fun** with some non-presidential news as well this week. Their headline on a story about the criminal trial of a Demoratic legislator from New Jersey: ["Bitcoin Critic Senator Menendez Convicted of Taking Bribes in Gold"](https://decrypt.co/240087/bitcoin-critic-senator-menendez-convicted-of-taking-bribes-in-gold)
 
 ### Odds & Ends
 
