--- a/2024/2024-07-21.md
+++ b/2024/2024-07-21.md
@@ -12,7 +12,7 @@ _By_ [_Peter A. McKay_](https://pmckay.com)
 
 <p>That could be just the formula for a new use case for digital money to emerge this year -- political payback.</p></em></blockquote>
 
-Several high-profile announcements last week loudly confirmed exactly that scenario underway. In particular, many tech CEOs are now donating millions to Donald Trump, who has explicitly [positioned himself](https://www.independent.co.uk/tech/trump-bitcoin-crypto-president-jd-vance-b2582235.html) as a pro-crypto candidate this time.
+Several high-profile announcements last week loudly confirmed exactly that scenario underway. In particular, many tech CEOs are now donating millions to Donald Trump, who has explicitly [positioned himself](https://www.independent.co.uk/tech/trump-bitcoin-crypto-president-jd-vance-b2582235.html) as a pro-crypto candidate in the current presidential race.
 
 (It also helps that the token rally continued [at a torrid pace](https://www.msn.com/en-us/money/news/bitcoin-posts-15-weekly-gain-amid-broader-crypto-rally-cnbc-crypto-world/vi-BB1qimKu) last week. So, yes, a lot of would-be political donors in crypto are still flush.)
 
@@ -28,7 +28,7 @@ Still, the anti-crypto label may stick to the Democratic Pary as a whole for som
 
 ### Week in Review: July 14-20, 2024
 
-**Like many Americans, I have strong feelings** of my own about all of the above, to be honest. But I'll save those to share another day perhaps.
+**Like many Americans, I have strong feelings** of my own about all of the above. But I'll save those to share another day perhaps.
 
 For now, let it suffice there is just a lot of news to cover. So let's get to those facts first:
 
@@ -42,11 +42,11 @@ For now, let it suffice there is just a lot of news to cover. So let's get to th
 
 - **Coinbase CEO Brian Armstrong,** a vocal critic of the Securities and Exchange Commission's enforcement campaign against crypto, met with House Democrats on Wednesday to discuss regulatory issues, according to [CoinDesk](https://www.coindesk.com/policy/2023/07/18/coinbase-ceo-brian-armstrong-to-meet-house-democrats-about-crypto-legislation-bloomberg/). Reuters [reported](https://www.reuters.com/technology/us-crypto-advocacy-group-tops-1-million-members-after-biden-veto-2024-06-06/) in June that Armstrong doesn't plan to ensorse a presidential candidate, preferring to push for bipartisan crypto legislation instead. But he is donating lavishly to pro-crypto PACs like Fairshake and Stand with Crypto.
 
-- **As of late June,** Fairshake had already contributed over $100 million to candidates in 35 House and Senate candidates. Its preferred candidates won 33 of those races. ([CNBC](https://www.cnbc.com/2024/06/26/crypto-pac-house-senate-elections.html))
+- **As of late June,** Fairshake had already contributed over $100 million to candidates in 35 House and Senate primaries. Its preferred candidates won 33 of those races. ([CNBC](https://www.cnbc.com/2024/06/26/crypto-pac-house-senate-elections.html))
 
 - **Ethereum co-founder Vitalik Buterin** took to his personal blog to [warn against](https://vitalik.eth.limo/general/2024/07/17/procrypto.html) the increasing politicization of crypto and the temptation for people in the industry to become single-issue voters based strictly on candidates' policies around regulating token markets.
 
-- **Despite the Republican support among some high-profile CEOs,** the rank and file of Silicon Valley still leans heavily toward Democrats. A recent poll by the tech-industry news site The Information found, taken before Biden dropped out, found that respondents favored him over Trump by a margin of [59% to 27%](https://www.theinformation.com/articles/biden-favored-by-the-information-readers-despite-investor-support-for-trump).
+- **Despite the Republican support among some high-profile CEOs,** the rank and file of Silicon Valley still leans heavily toward Democrats. A recent poll by the tech-industry news site The Information, taken before Biden dropped out, found that respondents favored Biden over Trump by a margin of [59% to 27%](https://www.theinformation.com/articles/biden-favored-by-the-information-readers-despite-investor-support-for-trump).
 
 - **Decrypt found time to have a bit of fun** with some non-presidential news as well this week. Their headline on a story about the criminal trial of a Demoratic legislator from New Jersey: ["Bitcoin Critic Senator Menendez Convicted of Taking Bribes in Gold"](https://decrypt.co/240087/bitcoin-critic-senator-menendez-convicted-of-taking-bribes-in-gold)
 
